add numpy notes

--- a/PythonToolsCheatsheet.ipynb
+++ b/PythonToolsCheatsheet.ipynb
@@ -59,20 +59,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,6 +143,70 @@
    "outputs": [],
    "source": [
     "jupyter nbconvert notebook.ipynb --to slides --post serve"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note on scalar in **numpy**: they are different from the scalars in basic Python: instead of just int, we also have types like `uint8`, `int8`, `uint16`, `int16`. It can be specified when creating a numpy array, but all the items in the array must be of the same type!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tensor example in numpy (3x3x2x1 tensor): "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3, 2, 1)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "t = np.array([[[[1],[2]],[[3],[4]],[[5],[6]]],[[[7],[8]],\\\n",
+    "    [[9],[10]],[[11],[12]]],[[[13],[14]],[[15],[16]],[[17],[17]]]])\n",
+    "t.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For matrix-matrix multiplication in numpy: \n",
+    "- left matrix should be arranged as rows  \n",
+    "- right matrix should be arranged as columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Important note** on matrix multiplication: \n",
+    "- for 2D matrices np.dot and np.matmul provide the same results \n",
+    "- for matrices with more than two dimension np.matmul and np.dot give different results!!!"
    ]
   },
   {
@@ -1974,7 +2024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
